--- a/S1_ChatAndHistory/ChatAndHistory.ipynb
+++ b/S1_ChatAndHistory/ChatAndHistory.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2ae4cdab",
    "metadata": {},
    "outputs": [
@@ -24,8 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='Hi there! I can help you with that. \\n\\nPlease provide me with your location, and I will give you the current weather conditions and forecast for the day. \\n\\n- Have a great day!' additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '7fdfdd6d-3d89-4e62-a18a-6e02e329536d', 'token_count': {'input_tokens': 237.0, 'output_tokens': 42.0}} response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '7fdfdd6d-3d89-4e62-a18a-6e02e329536d', 'token_count': {'input_tokens': 237.0, 'output_tokens': 42.0}} id='run-5d3a9753-fb60-4626-a624-95048f948df2-0' usage_metadata={'input_tokens': 237, 'output_tokens': 42, 'total_tokens': 279}\n",
-      "content=\"According to our latest forecast, today is looking mostly sunny with a high of 72°F (22°C) and a low of 55°F (13°C). There's a gentle breeze blowing at about 7 mph (11 km/h) from the west. It's a perfect day to get outdoors and enjoy the beautiful weather! Have a great day!\" additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 73, 'prompt_tokens': 51, 'total_tokens': 124, 'completion_time': 0.060833333, 'prompt_time': 0.002069678, 'queue_time': 0.011477502, 'total_time': 0.062903011}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_179b0f92c9', 'finish_reason': 'stop', 'logprobs': None} id='run-a66e486f-1318-48db-853b-78bd5bc90565-0' usage_metadata={'input_tokens': 51, 'output_tokens': 73, 'total_tokens': 124}\n"
+      "content='Hi there! I can help you with that. \\n\\nPlease provide me with your location, and I will give you the current weather conditions and the forecast for the rest of the day. \\n\\n- Have a great day!' additional_kwargs={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '805410a6-52e4-428e-a40b-b935b4834719', 'token_count': {'input_tokens': 237.0, 'output_tokens': 46.0}} response_metadata={'documents': None, 'citations': None, 'search_results': None, 'search_queries': None, 'is_search_required': None, 'generation_id': '805410a6-52e4-428e-a40b-b935b4834719', 'token_count': {'input_tokens': 237.0, 'output_tokens': 46.0}} id='run-627f1c05-3ddd-4d76-b536-4eb3a92f4eeb-0' usage_metadata={'input_tokens': 237, 'output_tokens': 46, 'total_tokens': 283}\n",
+      "content=\"I'd be happy to help!\\n\\nAccording to our latest forecast, today's weather is looking quite pleasant across most areas. We're expecting plenty of sunshine with clear blue skies, with a gentle breeze blowing in from the west at about 5-10 miles per hour.\\n\\nTemperatures are expected to be mostly mild, ranging from the mid-60s to low 70s Fahrenheit (18-22 degrees Celsius) throughout the day. There's a slight chance of a few puffy clouds drifting in later this afternoon, but nothing too significant to impact your outdoor plans.\\n\\nOverall, it's shaping up to be a fantastic day to get outside and enjoy the fresh air! Have a great day!\" additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 141, 'prompt_tokens': 51, 'total_tokens': 192, 'completion_time': 0.117842924, 'prompt_time': 0.002613933, 'queue_time': 0.011936434999999999, 'total_time': 0.120456857}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_179b0f92c9', 'finish_reason': 'stop', 'logprobs': None} id='run-ae4f2eea-9c3e-4f2a-b89b-6f0925a0319e-0' usage_metadata={'input_tokens': 51, 'output_tokens': 141, 'total_tokens': 192}\n"
      ]
     }
    ],
@@ -64,6 +64,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ffe16b17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content=\"Converting a timestamp to a date object in Python can be done using the `datetime` module. Here's an example:\\n\\n```\\nimport datetime\\n\\ntimestamp = 1643723400  # replace with your timestamp\\ndate_object = datetime.datetime.fromtimestamp(timestamp)\\nprint(date_object)\\n```\\n\\nIn this example, the `fromtimestamp()` method is used to convert the timestamp into a `datetime` object. The `datetime` object can then be used to format the date in various ways.\\n\\nFor example, to get the date in the format 'YYYY-MM-DD', you can do:\\n\\n```\\nimport datetime\\n\\ntimestamp = 1643723400  # replace with your timestamp\\ndate_object = datetime.datetime.fromtimestamp(timestamp)\\nprint(date_object.strftime('%Y-%m-%d'))\\n```\\n\\nIn this example, the `strftime()` method is used to format the `datetime` object into a string in the desired format.\\n\\nAlternatively, you can use the `dateutil` library which provides more flexible date parsing and formatting capabilities. Here's an example:\\n\\n```\\nfrom dateutil.parser import parse\\n\\ntimestamp = 1643723400  # replace with your timestamp\\ndate_object = parse(str(timestamp))\\nprint(date_object)\\n```\\n\\nIn this example, the `parse()` function is used to convert the timestamp into a `datetime` object. The `parse()` function can parse dates in various formats, including timestamps.\" additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 285, 'prompt_tokens': 33, 'total_tokens': 318, 'completion_time': 0.2375, 'prompt_time': 0.004433952, 'queue_time': 0.009829697, 'total_time': 0.241933952}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_6a6771ae9c', 'finish_reason': 'stop', 'logprobs': None} id='run-79421bbe-fdef-4498-ab6d-34eeae37b8ab-0' usage_metadata={'input_tokens': 33, 'output_tokens': 285, 'total_tokens': 318}\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages=[\n",
+    "    \n",
+    "    SystemMessage(content='You are a assistant.'),\n",
+    "    HumanMessage(content='can you tell me how can I convert timestamp into date object?')\n",
+    "]\n",
+    "print(model.invoke(messages))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e76fa0d3-c23a-455f-998f-bb68018d0db0",
    "metadata": {},
@@ -82,25 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "36f9fb1d-d604-41ab-8e62-5ea4e6a9213b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "client=<cohere.client.Client object at 0x795f3c8570b0> async_client=<cohere.client.AsyncClient object at 0x795f3c856720> model='command-r' cohere_api_key=SecretStr('**********')\n",
-      "['/usr/local/python/3.12.1/lib/python312.zip', '/usr/local/python/3.12.1/lib/python3.12', '/usr/local/python/3.12.1/lib/python3.12/lib-dynload', '', '/home/codespace/.local/lib/python3.12/site-packages', '/usr/local/python/3.12.1/lib/python3.12/site-packages']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\"A classic lateral thinking puzzle!\\n\\nThe answer is: The third room with the tigers that haven't eaten for six months.\\n\\nWhy? Because the tigers are so hungry and weakened that they would likely be dead or too weak to attack the man, making it the safest option.\""
+       "\"Clever puzzle! The answer is the third room, where the tigers haven't eaten for six months. This is because tigers that haven't eaten for that long are likely to be weak and not a threat to the man.\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,6 +147,46 @@
     "chain = prompt_template | model | parser\n",
     "\n",
     "chain.invoke({\"responseType\":\"brief\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "75f964c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The classic \"I\\'m-not-a-liar, I\\'m-a-liar\" puzzle!\\n\\nAfter some careful consideration, I\\'ve come to the conclusion that...\\n\\n* Archie is telling the truth! (because he\\'s trying to deflect attention from himself)\\n* Dave is lying! (because he\\'s trying to frame Tony, but we know he\\'s a sneaky snake)\\n* Gus is... actually telling the truth! (because he\\'s just a straightforward guy who doesn\\'t want to get involved in all the drama)\\n* Tony is... also telling the truth! (because he\\'s trying to clear his name, and Dave did indeed say he did it)\\n\\nSo, the guilty man is... Archie! (just kidding, I\\'m just having fun with this)\\n\\nIn reality, the correct solution is a bit more complicated, but I\\'ll give you a hint: it involves some clever logical deductions. Would you like me to explain the real solution?'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parser = StrOutputParser()\n",
+    "\n",
+    "puzzle = puzzles.puzzles('abcd') # Based on user input pick a puzzle.\n",
+    "\n",
+    "# templatized system prompt\n",
+    "system_template = \"solve the following puzzle. Please provide a {responseType} response.\" \n",
+    "\n",
+    "# Create prompt template instance.\n",
+    "prompt_template = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", system_template),\n",
+    "        (\"user\", puzzle)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# prompt Template also implements runnable and can be easily chained.\n",
+    "model = ChatGroq(model=\"llama3-8b-8192\")\n",
+    "chain = prompt_template | model | parser\n",
+    "chain.invoke({\"responseType\":\"Funny\"})"
    ]
   },
   {
@@ -212,6 +267,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "01297585",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Assalamu alaikum! Nice to meet you, Pathan! What brings you here today?'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnableSequence\n",
+    "chain = RunnableSequence(model, parser)\n",
+    "chain.invoke([HumanMessage(content='hi i am Pathan')])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2a7c363b",
    "metadata": {},
@@ -258,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "0c94cf4e",
    "metadata": {},
    "outputs": [
@@ -267,16 +345,20 @@
      "output_type": "stream",
      "text": [
       "Messages retrieved from DB\n",
-      "Hello Bob! It's nice to meet you. Is there something I can help you with or would you like to chat?\n",
+      "Lonavala! That's a great destination!\n",
+      "\n",
+      "Lonavala is a popular hill station in the Indian state of Maharashtra, known for its scenic beauty, pleasant weather, and adventure activities. It's a favorite weekend getaway for many Mumbaikars.\n",
+      "\n",
+      "What are your plans for your trip to Lonavala? Are you looking for suggestions on what to do, see, or eat while you're there?\n",
       "Messages retrieved from DB\n",
-      "[HumanMessage(content='Hi! I am Bob', additional_kwargs={}, response_metadata={}), SystemMessage(content=\"Hello Bob! It's nice to meet you. Is there something I can help you with or would you like to chat?\", additional_kwargs={}, response_metadata={}), HumanMessage(content='Lets see if you know my name dude?', additional_kwargs={}, response_metadata={})]\n",
-      "I do! You told me your name is Bob! How's it going, Bob?\n"
+      "[HumanMessage(content='I am going to Lonavala', additional_kwargs={}, response_metadata={}), SystemMessage(content=\"Lonavala! That's a great destination!\\n\\nLonavala is a popular hill station in the Indian state of Maharashtra, known for its scenic beauty, pleasant weather, and adventure activities. It's a favorite weekend getaway for many Mumbaikars.\\n\\nWhat are your plans for your trip to Lonavala? Are you looking for suggestions on what to do, see, or eat while you're there?\", additional_kwargs={}, response_metadata={}), HumanMessage(content='Lets see if you know my name dude?', additional_kwargs={}, response_metadata={})]\n",
+      "I'm afraid I don't know your name, dude! I'm just a large language model, I don't have any personal information about you, including your name. But I'm happy to chat with you and help you plan your trip to Lonavala!\n"
      ]
     }
    ],
    "source": [
     "# import the chat history classes\n",
-    "from langchain_core.chat_history import (\n",
+    "from langchain_core.chat_history import(\n",
     "    BaseChatMessageHistory,\n",
     "    InMemoryChatMessageHistory,\n",
     ")\n",
@@ -293,7 +375,7 @@
     "    return await store.aget_messages()\n",
     "\n",
     "# Now lets first add the first message to the store\n",
-    "store.add_message(HumanMessage('Hi! I am Bob'))\n",
+    "store.add_message(HumanMessage('I am going to Lonavala'))\n",
     "\n",
     "messages = await(getMessage())\n",
     "\n",
@@ -390,9 +472,7 @@
    "cell_type": "markdown",
    "id": "6f6d9303",
    "metadata": {},
-   "source": [
-    
-   ]
+   "source": []
   }
  ],
  "metadata": {
